<resources>
    <string name="app_name">RKF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="err_mobile_missing">Contact number should be between 7 to 15 Digit</string>
    <string name="err_country_code_length">Country code should be between 1 to 3 Digit</string>
    <string name="err_mobile_format">Contact number format should be like: +61-1234567890</string>
    <string name="err_mobile_invalid">Contact number is not valid</string>
    <string name="err_email_missing">Please enter your email Id.</string>
    <string name="err_email_or_phone_missing">Please enter an email id or mobile number</string>
    <string name="err_password_missing">Please enter password.</string>
    <string name="err_cpassword_missing">Please enter Confirm password</string>
    <string name="err_email_invalid">Please enter your valid email Id.</string>
    <string name="err_email_or_phone_invalid">Please enter valid email id or phone number</string>
    <string name="err_password_length_invalid">Password length should be 6 to 20</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="err_otp_missing">Please enter OTP</string>
    <string name="err_title_missing">Please enter Name</string>
    <string name="err_address_missing">Please enter address</string>
    <string name="err_suburb_missing">Please enter suburb</string>
    <string name="err_city_missing">Please enter city</string>
    <string name="err_state_missing">Please enter state</string>
    <string name="err_country_missing">Please enter country</string>
    <string name="err_postcode_missing">Please enter postcode</string>
    <string name="err_postcode_length">Postcode length should be 4 to 10</string>
    <string name="err_query_missing">Please enter query</string>
    <string name="err_select_age">Please select age</string>
    <string name="err_select_gender">Please select gender</string>
    <string name="err_otp">Please enter OTP</string>
    <string name="err_otp_length">OTP length must be greater than or equal to 4</string>
    <string name="err_old_password_missing">Please enter old password.</string>
    <string name="err_new_password_missing">Please enter new password.</string>
    <string name="err_new_password_min_length">Password must be 6 characters long</string>
    <string name="err_new_password_max_length">Password length must not be greater than 20</string>
    <string name="err_confirm_password_missing">Please confirm new password.</string>
    <string name="err_passwords_not_same">Password and confirm password does not match.</string>
    <string name="err_new_password_matches_new_password">New password is same as old password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="sample_email">aaa@aaa.com</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_subtitle">Enter your registered email\naddress to receive password reset\ninstructions</string>
    <string name="otp_message">Enter OTP code sent to your number</string>
    <string name="otp_message_register">Please enter the verification code sent to your phone number to complete registration</string>
    <string name="otp_message_forgot_password">Please enter the verification code\nsent to your email to reset\nyour password</string>
    <string name="home">Home</string>
    <string name="my_task">My Task</string>
    <string name="document">Document</string>
    <string name="notification">Notification</string>
    <string name="business_details">Business Details</string>
    <string name="user_name_placeholder">%1$s %2$s %3$s</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="client_workflow">Client workflow</string>
    <string name="client_workflow_desc">Client Workflow description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_an_image">Pick an Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="next">Next</string>
    <string name="photo_transition_name">photo_transition_name</string>
    <string name="delete">Delete</string>
    <string name="select_an_option">Select an Option</string>
    <string name="title">Title</string>
    <string name="value">Value</string>
    <string name="details">Details</string>
    <string name="err_key_value_missing">Please enter value of \'%1$s\' key</string>
    <string name="msg_confirmation_submit_doc">Are you sure you want to submit document ?</string>
    <string name="confirm">Confirm</string>
    <string name="err_upload_doc_images">Please upload document images</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="err_docs_will_appear_here">Your documents will appear here</string>
    <string name="choose_the_language">Choose the language</string>
    <string name="continue_str">Continue</string>
    <string name="paswword">Paswword</string>
    <string name="verification">Verification</string>
    <string name="resend_the_code"><u>Resend the Code</u></string>
    <string name="phone_number">Phone Number</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="gps_network_not_enabled">GPS location not enabled</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid lat long</string>
    <string name="no_address_found">No address found</string>
    <string name="address">Address</string>
    <string name="suburb">Suburb</string>
    <string name="state">State</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="no_geocoder_available">Geocoder not available</string>
    <string name="Cancel">Cancel</string>
    <string name="discover">Discover</string>
    <string name="updates">Updates</string>
    <string name="signup">Sign Up</string>
    <string name="signup_unline"><u>Sign Up</u></string>
    <string name="msg_app_close">Are you sure you want to close the app?</string>
    <string name="msg_app_logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_network_connected">No Network Connected</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot Password</string>
    <string name="reset_password">Reset password</string>
    <string name="verification_code">Verification Code</string>
    <string name="bad_response">Bad Response</string>
    <string name="something_went_wrong">Something went wrong, please try again later</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email</string>
    <string name="sales_email_address">Sales Email</string>
    <string name="email_or_phone">Email/Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password_q"><u>Forgot password?</u></string>
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="please_sign_in_to_continue">Please Sign-in to Continue</string>
    <string name="login_message">Ray kelly Fitness Customer Login!</string>
    <string name="please_sign_up_to_continue">Please Sign-up to Continue</string>
    <string name="accept_terms_of_use"><u>Accept Terms of Use</u></string>
    <string name="reg">Register</string>
    <string name="sell_give_away">Sell &amp; Give Away</string>
    <string name="sacn_qr">Scan Boxvert</string>
    <string name="checklist">Checklist</string>
    <string name="sell_or_give_away">Upload</string>
    <string name="add_item">Upload Add Item</string>
    <string name="add_checklist">Add Checklist</string>
    <string name="edit_checklist">Edit Checklist</string>
    <string name="service_directory">Directory</string>
    <string name="_3u_agent">3U Agent</string>
    <string name="search_3u_agent">Search 3U Agent</string>
    <string name="profile">Profile</string>
    <string name="sales_profile">Sales Profile</string>
    <string name="shipping_detail">Shipping Detail</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="three_u_market">3U Market Browse</string>
    <string name="redeem_free_boxes">Redeem Free Boxes</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="concierge_request">Concierge Request</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="contact_number">Contact Number</string>
    <string name="sales_contact_number">Sales Contact Number</string>
    <string name="scan_qr_code">Scan Boxvert</string>
    <string name="boxvert">Boxvert</string>
    <string name="alphanumeric_code">Alphanumeric Code</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_filter">Search Filter</string>
    <string name="enter_search_distributor">Enter Search Distributor</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="home_below">Get more FREE boxes. Ask family or friends to download the 3U Moving App today.</string>
    <string name="boxes_amp_packaging"><![CDATA[Boxes &\n Packaging]]></string>
    <string name="utilities">Utilities</string>
    <string name="complete_profile">Complete profile</string>
    <string name="server_client_id">177012164831-5vmjbjvndkoq4eqss51g0uc5g5bi2ful.apps.googleusercontent.com</string>
    <string name="for_sell">Sell</string>
    <string name="for_donate">Donate</string>
    <string name="for_give_away">Give Away</string>
    <string name="cancel">Cancel</string>
    <string name="msg_permission_justification">%1$s is required %2$s\n\nPlease consider granting the permission to proceed.</string>
    <string name="done">done</string>
    <string name="change">Change</string>
    <string name="select_location">Select Location</string>
    <string name="error_item_name">Please enter item name</string>
    <string name="error_item_category">Please select item category</string>
    <string name="error_item_option">Please select any option</string>
    <string name="error_your_location">Please select your location</string>
    <string name="error_item_description">Please enter item description</string>
    <string name="error_item_price">Please enter item Price</string>
    <string name="residential_checklist">Residential Checklist</string>
    <string name="business_checklist">Business Checklist</string>
    <string name="my_orders">My Orders</string>
    <string name="login_terms_message">By proceeding you also agree to the Terms of Service and Privacy Policy.</string>
</resources>