<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/HomeFragment"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/ProfileShowFragment"
            android:icon="@drawable/profile_menu_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/SalesProfileEditFragment"
            android:icon="@drawable/add_sales_profile"
            android:title="@string/sales_profile" />
        <item
            android:id="@+id/U3AgentFragment"
            android:icon="@drawable/agent_icon"
            android:title="@string/_3u_agent" />
        <item
            android:id="@+id/ServicesDirectoryFragment"
            android:icon="@drawable/directory"
            android:title="@string/service_directory" />
        <item
            android:id="@+id/SacnQRFragment"
            android:icon="@drawable/boxvert"
            android:title="@string/sacn_qr" />
      <!--  <item
            android:id="@+id/ChecklistFragment"
            android:icon="@drawable/checklist_menu_icon"
            android:title="@string/checklist" />-->
        <item
            android:id="@+id/ResidentialChecklistFragment"
            android:icon="@drawable/residential_checklist"
            android:title="@string/residential_checklist" />
        <item
            android:id="@+id/BusinessChecklistFragment"
            android:icon="@drawable/business_checklist"
            android:title="@string/business_checklist" />
        <item
            android:id="@+id/SellGiveAwaFragment"
            android:icon="@drawable/sell_give_away_menu_icon"
            android:title="@string/sell_give_away" />
        <item
            android:id="@+id/ThreeUMarketFargment"
            android:icon="@drawable/market_menu_icon"
            android:title="@string/three_u_market" />
        <item
            android:id="@+id/MyOrdersFragment"
            android:icon="@drawable/my_orders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/RedeemFreeBoxFragment"
            android:icon="@drawable/redeem_free_boxes_menu_icon"
            android:title="@string/redeem_free_boxes" />
        <item
            android:id="@+id/ConciergeRequestFragment"
            android:icon="@drawable/concierge"
            android:title="@string/concierge_request" />
        <item
            android:id="@+id/ReferAFragment"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/refer_a_friend" />
        <item
            android:id="@+id/ContactUsFragment"
            android:icon="@drawable/contac_us_menu_icon"
            android:title="Contact us" />
        <item
            android:id="@+id/Logout"
            android:icon="@drawable/logout_menu_icon"
            android:title="@string/logout" />
    </group>


</menu>
