<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.three.u.ui.login.LoginViewModel" />
        <variable
            name="clickHandler"
            type="com.three.u.ui.login.LoginFragment.ClickHandler" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedscoll_view"
             android:background="@drawable/bg_main_gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <LinearLayout
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ImageView>

                <TextView
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:text="@string/welcome_to"
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/txt_color_dark"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/login_message"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:theme="@style/TilSignUp"
                app:error="@{viewModel.errEmail}"
                app:errorEnabled="true"
                app:hintEnabled="true"
                android:textColorHint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_phone"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:text="@={viewModel.requestLogin.email}"
                    app:hintTextAppearance="@style/AppTheme.NoActionBarNew" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:theme="@style/TilSignUp"
                app:error="@{viewModel.errPassword}"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:fontFamily="@font/poppins_regular"
                    android:singleLine="true"
                    android:textColor="@color/black"

                    android:textSize="16dp"
                    android:text="@={viewModel.requestLogin.password}"
                    app:hintTextAppearance="@style/AppTheme.NoActionBarNew" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/white"
                android:text="@string/login"
                android:onClick="@{() -> clickHandler.onClickLogin()}"
                android:fontFamily="@font/poppins_semibold"
                android:background="@drawable/common_button"
                android:textSize="16sp"
                android:layout_marginTop="27dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="@font/poppins_regular"
                android:textSize="18dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_your_password_q"
                android:onClick="@{() -> clickHandler.onClickForgotPassword()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="@font/poppins_regular"
                android:textSize="18dp"
                android:textColor="@color/txt_color_dark"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_terms_message"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        </androidx.core.widget.NestedScrollView>



</layout>