<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.three.u.forgot_password.ForgotPasswordViewModel"/>

        <variable
            name="clickHandler"
            type="com.three.u.forgot_password.ForgotPasswordFragment.ClickHandler"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        tools:context=".forgot_password.ForgotPasswordFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="parent"/>

        <ImageView
                android:id="@+id/ivForgotPassword"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/forgot_password_icon"
                app:layout_constraintBottom_toTopOf="@id/wrapper_content"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.59"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

        <LinearLayout
            android:id="@+id/wrapper_content"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/ivForgotPassword">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/AppTitle"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_your_password"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
                app:layout_constraintTop_toBottomOf="@id/ivForgotPassword"/>

            <TextView
                android:id="@+id/tvSubtitle"
                style="@style/regular"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="19sp"
                android:text="@string/forgot_password_subtitle"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
                />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_or_phone"
            android:theme="@style/TilSignUp"
            app:error="@{viewModel.errEmail}"
            app:errorEnabled="true"
            app:hintEnabled="true"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/wrapper_content"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_or_phone"
                style="@style/EdtSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:text="@={viewModel.requestForgotPassword.Email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/AppMaterialButton"
            android:id="@+id/btnSubmit"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> clickHandler.onClickSubmit()}"
            android:text="@string/submit"
            app:cornerRadius="2dp"
            android:background="@drawable/common_button"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>