<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="clickHandler"
            type="com.raykellyfitness.ui.googlemap.GoogleMapFragment.GoogleMapClickHandler" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <fragment
            android:id="@+id/gmap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/map_finish_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLocationPinUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/map_pin"
            app:layout_constraintBottom_toBottomOf="@+id/gmap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gmap" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/map_finish_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/common_button"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/done"
            android:onClick="@{()->clickHandler.doneClicked()}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_End"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_Start" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_AddressHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_End"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_Start"
            app:layout_constraintTop_toBottomOf="@+id/map_finish_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_Address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text=""
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@+id/btn_change"
            app:layout_constraintStart_toStartOf="@+id/tv_AddressHeading"
            app:layout_constraintTop_toBottomOf="@+id/tv_AddressHeading"
            tools:text="ffkgjfgkldfgdjghgjhgjkhgfkghgjghdfglkghfgklfdghlkgghkfdjlghgjklfghgkljfhglgh" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:onClick="@{()->clickHandler.changeClicked()}"
            android:background="@drawable/common_button"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/change"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_Address"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_End"
            app:layout_constraintStart_toEndOf="@+id/tv_Address"
            app:layout_constraintTop_toTopOf="@+id/tv_Address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>